2005-05-31  *** Released version 0.6.14

2005-05-29  Fernando Perez  <fperez@colorado.edu>

	* IPython/ultraTB.py (VerboseTB.text): Fix crash for tracebacks
	with files not on the filesystem.  Reported by Eliyahu Sandler
	<eli@gondolin.net>

2005-05-22  Fernando Perez  <fperez@colorado.edu>

	* IPython/iplib.py: Fix a few crashes in the --upgrade option.
	After an initial report by LUK ShunTim <shuntim.luk@polyu.edu.hk>.

2005-05-19  Fernando Perez  <fperez@colorado.edu>

	* IPython/iplib.py (safe_execfile): close a file which could be
	left open (causing problems in win32, which locks open files).
	Thanks to a bug report by D Brown <dbrown2@yahoo.com>.

2005-05-18  Fernando Perez  <fperez@colorado.edu>

	* IPython/Shell.py (MatplotlibShellBase.mplot_exec): pass all
	keyword arguments correctly to safe_execfile().

2005-05-13  Fernando Perez  <fperez@colorado.edu>

	* ipython.1: Added info about Qt to manpage, and threads warning
	to usage page (invoked with --help).

	* IPython/iplib.py (MagicCompleter.python_func_kw_matches): Added
	new matcher (it goes at the end of the priority list) to do
	tab-completion on named function arguments.  Submitted by George
	Sakkis <gsakkis-AT-eden.rutgers.edu>.  See the thread at
	http://www.scipy.net/pipermail/ipython-dev/2005-April/000436.html
	for more details.

	* IPython/Magic.py (magic_run): Added new -e flag to ignore
	SystemExit exceptions in the script being run.  Thanks to a report
	by danny shevitz <danny_shevitz-AT-yahoo.com>, about this
	producing very annoying behavior when running unit tests.

2005-05-12  Fernando Perez  <fperez@colorado.edu>

	* IPython/iplib.py (handle_auto): fixed auto-quoting and parens,
	which I'd broken (again) due to a changed regexp.  In the process,
	added ';' as an escape to auto-quote the whole line without
	splitting its arguments.  Thanks to a report by Jerry McRae
	<qrs0xyc02-AT-sneakemail.com>.

	* IPython/ultraTB.py (VerboseTB.text): protect against rare but