@@ -1,3 +1,8 @@
+2005-06-01  Fernando Perez  <fperez@colorado.edu>
+
+	* IPython/iplib.py (MagicCompleter.file_matches): Fix
+	tab-completion of filenames within open-quoted strings.
+
 2005-05-31  *** Released version 0.6.14
 
 2005-05-29  Fernando Perez  <fperez@colorado.edu>
